--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -3,14 +3,12 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
-msgid "home_title"
-msgstr "Bienvenue chez Holberton"
-msgid "home_header"
-msgstr "Bonjour monde!"
+msgid ""
+msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-10-31 23:40+0100\n"
-"PO-Revision-Date: 2023-10-31 23:42+0100\n"
+"POT-Creation-Date: 2023-11-01 00:26+0100\n"
+"PO-Revision-Date: 2023-11-01 00:27+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
 "Language-Team: fr <LL@li.org>\n"
@@ -19,4 +17,12 @@ msgstr "Bonjour monde!"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.13.1\n"
+
+#: 3-app.py:26
+msgid "Bienvenue chez Holberton"
+msgstr "Welcome to Holberton"
+
+#: 3-app.py:27
+msgid "Bonjour monde!"
+msgstr "Hello world"
 
