--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-11-01 00:26+0100\n"
-"PO-Revision-Date: 2023-11-01 00:27+0100\n"
+"POT-Creation-Date: 2023-11-01 00:36+0100\n"
+"PO-Revision-Date: 2023-11-01 00:36+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
 "Language-Team: fr <LL@li.org>\n"
@@ -19,10 +19,10 @@ msgstr ""
 "Generated-By: Babel 2.13.1\n"
 
 #: 3-app.py:26
-msgid "Bienvenue chez Holberton"
-msgstr "Welcome to Holberton"
+msgid "Welcome to Holberton"
+msgstr "Bienvenue chez Holberton"
 
 #: 3-app.py:27
-msgid "Bonjour monde!"
-msgstr "Hello world"
+msgid "Hello world"
+msgstr "Bonjour monde!"
 
