--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -19,10 +19,9 @@ msgstr ""
 "Generated-By: Babel 2.13.1\n"
 
 #: 3-app.py:26
-msgid "Welcome to Holberton"
-msgstr "Bienvenue chez Holberton"
+msgid "Bienvenue chez Holberton"
+msgstr "Welcome to Holberton"
 
 #: 3-app.py:27
-msgid "Hello world"
-msgstr "Bonjour monde!"
-
+msgid "Bonjour monde!"
+msgstr "Hello world"
