--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -19,10 +19,10 @@ msgstr ""
 "Generated-By: Babel 2.13.1\n"
 
 #: 3-app.py:26
-msgid "Welcome to Holberton"
-msgstr "Bienvenue chez Holberton"
+msgid "home_title"
+msgstr "Welcome to Holberton"
 
 #: 3-app.py:27
-msgid "Hello world"
-msgstr "Bonjour monde!"
+msgid "home_header"
+msgstr "Hello world"
 
