--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -1,15 +1,15 @@
-# English translations for i18n.
+# English translations for 0x02-i18n.
 # Copyright (C) 2023 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <onlinekingsley@gmail.com>, 2023.
+# FIRST AUTHOR onlinekingsley@gmail.com, 2023.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: i18n VERSION\n"
+"Project-Id-Version: 0x02-i18n VERSION\n"
 "Report-Msgid-Bugs-To: onlinekingsley@gmail.com\n"
-"POT-Creation-Date: 2023-11-01 01:10+0100\n"
-"PO-Revision-Date: 2023-11-01 01:11+0100\n"
-"Last-Translator: Chime Kingsley <onlinekingsley@gmail.com>\n"
+"POT-Creation-Date: 2023-11-01 00:36+0100\n"
+"PO-Revision-Date: 2023-11-01 00:37+0100\n"
+"Last-Translator: CHIME KINGSLEY CHIKA <onlinekingsley@gmail.com>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
