--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -1,14 +1,14 @@
-# English translations for i18n.
+# English translations for PROJECT.
 # Copyright (C) 2023 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <onlinekingsley@gmail.com>, 2023.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: i18n VERSION\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: onlinekingsley@gmail.com\n"
-"POT-Creation-Date: 2023-11-01 01:10+0100\n"
-"PO-Revision-Date: 2023-11-01 01:11+0100\n"
+"POT-Creation-Date: 2023-11-01 04:14+0100\n"
+"PO-Revision-Date: 2023-11-01 04:15+0100\n"
 "Last-Translator: Chime Kingsley <onlinekingsley@gmail.com>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -18,11 +18,17 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.13.1\n"
 
-#: templates/3-index.html:6
-msgid "home_header"
-msgstr "Hello world!"
-
-#: templates/3-index.html:10
 msgid "home_title"
 msgstr "Welcome to Holberton"
 
+msgid "home_header"
+msgstr "Hello world!"
+
+msgid "logged_in_as"
+msgstr "You are logged in as %(username)s."
+
+msgid "not_logged_in"
+msgstr "You are not logged in."
+
+msgid "current_time_is"
+msgstr "The current time is %(current_time)s."
